      \code{.saveRDS()} are now deprecated in favour of the public
      functions \code{readRDS()} and \code{saveRDS()} introduced in \R
      2.13.0.
      
      \item Switching off lazy-loading of code \emph{via} the
      \samp{LazyLoad} field of the \file{DESCRIPTION} file is now
      deprecated.  In future all packages will be lazy-loaded.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check} on a multi-architecture installation now
      skips the user's \file{.Renviron} file for the
      architecture-specific tests (which do read the
      architecture-specific \file{Renviron.site} files).  This is
      consistent with single-architecture checks, which use
      \option{--no-environ}.

      \item \command{R CMD build} now looks for \file{DESCRIPTION}
      fields \samp{BuildResaveData} and \samp{BuildKeepEmpty} for
      per-package overrides.  See \sQuote{Writing R Extensions}.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{plot.lm(which = 5)} was intended to order factor
      levels in increasing order of mean standardized residual.   It
      ordered the factor labels correctly, but could plot the wrong
      group of residuals against the label.  (\PR{14545})

      \item \code{mosaicplot()} could clip the factor labels, and could
      overlap them with the cells if a non-default value of
      \code{cex.axis} was used.  (Related to \PR{14550}.)

      \item \code{dataframe[[row,col]]} now dispatches on \code{[[}
      methods for the selected column (spotted by Bill Dunlap).

      \item \code{sort.int()} would strip the class of an object, but
      leave its object bit set.  (Reported by Bill Dunlap.)

      \item \code{pbirthday()} and \code{qbirthday()} did not implement
      the algorithm exactly as given in their reference and so were
      unnecessarily inaccurate.

      \code{pbirthday()} now solves the approximate formula analytically